<?xml version="1.0"?>
<package format="3">
  <name>mynt_eye_ros_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS messages for the MyntEye Package.
  </description>
  <maintainer email="johnzhao@slightech.com">John Zhao</maintainer>
  <license>M.I.T</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
