<?xml version="1.0"?>
<package format="3">
  <name>mynt_eye_ros_wrapper</name>
  <version>0.0.0</version>
  <description>The mynt eye ros wrapper package</description>

  <maintainer email="johnzhao@slightech.com">John Zhao</maintainer>

  <license>Slightech License</license>

  <!-- <url type="website">http://wiki.ros.org/mynt_eye_ros_wrapper</url> -->

  <author email="johnzhao@slightech.com">John Zhao</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <!-- <depend>nodelet</depend> -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>mynt_eye_ros_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
